<resources>
    <string name="facebook_app_id">1177856802232872</string>
    <string name="app_name">Holic</string>
    <string name="server">https://holic-server.herokuapp.com/api/users/</string>
    <string name="server_chat">https://holic-server.herokuapp.com/api/chats/</string>
    <string name="server_bac">https://holic-server.herokuapp.com/api/chats/bac/</string>
    <string name="server_chat_user">https://holic-server.herokuapp.com/api/chats/user/</string>
    <string name="server_currsession">https://holic-server.herokuapp.com/api/currsession/</string>
    <string name="server_pastsession">https://holic-server.herokuapp.com/api/pastsessions/</string>
    <string name="action_settings">Settings</string>
    <string name="add_one_drink">+1</string>
    <string name="add_half_drink">+1/2</string>
    <string name="refresh_bac">Refresh</string>
    <string name="drinks_label">Number of drinks: %.1f</string>
    <string name="bac_header">BAC:</string>
    <string name="bac_label">%.3f</string>
    <string name="reset_drink">Reset</string>
    <string name="end_night">End Night</string>
    <string name="end_night_confirm">Do you want to save your session?</string>
    <string name="loading">Loading...</string>
    <string name="loading_message">We\'re getting your information. Thanks for being patient!</string>
    <string name="title_activity_drink_log">Drink Logging</string>
    <string name="information_prompt">
        To help us keep better track of your BAC, enter your information.</string>
    <string name="weight_prompt">Enter your weight in lbs:</string>
    <string name="weight_hint">e.g. 150</string>
    <string name="okay">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="undo">Undo</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save Changes</string>
    <string name="undo_confirm_title">Undo last drink</string>
    <string name="undo_confirm_message">"Are you sure you want to undo your last drink? This action cannot be undone."</string>
    <string name="gender_prompt">Enter your body type:</string>
    <string-array name="gender_choices">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="enter_valid_weight">Please give a valid weight</string>
    <string name="enter_threshold">To enable automatic texting, threshold is required.</string>
    <string name="enter_number">To enable automatic texting, a phone number is required.</string>
    <string name="invalid_friend">Your entered friend is invalid. Have they installed Holic?</string>
    <string name="duplicate_friend">You have already added this friend.</string>
    <string name="server_unreachable">Unable to reach the server.</string>
    <string name="error_message">Error Message</string>
    <string name="gender_disclaimer">
        *Physical body type is needed to calculate your BAC more accurately.
        We recognize that not everyone falls into male/female categories. Please use the gender that
        most accurately reflects your body type (e.g. transgender people who have not taken hormones
        should use the gender assigned at birth).
        </string>
    <string name="enter_contact">Emergency Contact Name</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_number">Contact Phone Number</string>
    <string name="sample_number">1234567890</string>
    <string name="contact_explain">
        Your emergency contact will be automatically texted if your BAC passes the threshold. Emergency
    contact can be changed from the Settings menu.</string>
    <string name="emergency_message_format_string">
        "Hi %1$s, You are receiving this message because your friend %2$s %3$s has a BAC of %4$.3f or higher. They are probably too drunk to take care of themselves, so you should go find them! This message was automatically generated by Holic"
    </string>
    <string name="enable_texting_message">Check to enable automatic texting.</string>
    <string name="threshold_title">Threshold</string>
    <string name="legal_limit_hint">e.g. 0.08 (the legal limit)</string>
    <string name="create_profile">Create Your Profile</string>
    <string name="edit_profile">Profile</string>
    <string name="profile_firstname">First Name</string>
    <string name="profile_lastname">Last Name</string>
    <string name="title_activity_view_profile">View Profile</string>
    <string name="login_cancel">Login attempt cancelled. Check your Internet connection.</string>
    <string name="login_failed">Login attempt failed. Check your Internet connection.</string>
    <string name="title_activity_landing">Home</string>
    <string name="new_night">Start a new night!</string>
    <string name="stats">Statistics</string>
    <string name="length_format">Length of night: %1$s hours, %2$s minutes, %3$s seconds</string>
    <string name="average_format">Average drinks per hour: %1$.3f</string>
    <string name="max_bac_format">Highest BAC: %1$.3f</string>
    <string name="chats">Chat Rooms</string>
    <string name="logout">Logout</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <!-- Chat-->
    <string name="new_user">Add new user to chat</string>
    <string name="new_chat">New Chat</string>
    <string name="chat_name">Chat Name</string>
    <string name="create_chat">Create</string>
    <string name="add_person">Add</string>
    <string name="people_in_chat">People in chat:</string>
    <string name="delete_confirm_message">Delete this chat?</string>
    <string name="delete">Delete</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_edit_profile">Profile</string>
    <!--For chat-->
    <string name="title_activity_login">ChatLoginActivity</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_email">Email</string>
    <string name="err_msg_name">Enter full name</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="title_activity_chat_room_discussion">ChatRoomDiscussionActivity</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_stats">Statistics</string>
    <string name="date_format">MM/dd/yy HH:mm</string>
    <string name="title_activity_stats_graph">Session</string>
    <string name="graph_title">%s Statistics</string>

    <string name="start_new_night">Start New Night</string>
</resources>
