<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cos333.project_corgis.DrinkLogActivity"
    tools:showIn="@layout/activity_drink_log">

    <TableRow>
        <Button
            android:layout_width="0sp"
            android:layout_height="100sp"
            android:layout_weight="1"
            android:textSize="50sp"
            android:text="@string/add_one_drink"
            android:onClick="addOneDrink"/>
        <Button
            android:layout_width="0sp"
            android:layout_height="100sp"
            android:layout_weight="1"
            android:textSize="50sp"
            android:text="@string/add_half_drink"
            android:onClick="addHalfDrink"/>
    </TableRow>

    <TableRow>
        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"
            android:id="@+id/bac_level" />
    </TableRow>

    <TableRow>
        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"/>
    </TableRow>

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drinks_level"
            />
    </TableRow>

    <TableRow>
        <Space
            android:layout_width="1dp"
            android:layout_height="10dp"/>
    </TableRow>

    <TableRow>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refresh_bac"
            android:id="@+id/button"
            android:onClick="refreshBAC" />
    </TableRow>


</TableLayout>
